<?xml version="1.0" encoding="utf-8"?><!-- EnterTheCar - Adrián Carmona Peña -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Summary">

    <!-- Title -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.25">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal|bottom"
            android:text="@string/summary"
            android:textSize="32dp" />
    </LinearLayout>

    <!-- Name -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="25dp"
            android:layout_weight="1"
            android:gravity="right"
            android:text="@string/name"
            android:textSize="16dp"
            android:textStyle="bold|italic" />

        <TextView
            android:id="@+id/txvName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="left" />
    </LinearLayout>

    <!-- Place -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="25dp"
            android:layout_weight="1"
            android:gravity="right"
            android:text="@string/place"
            android:textSize="16dp"
            android:textStyle="bold|italic" />

        <TextView
            android:id="@+id/txvPlace"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="left" />
    </LinearLayout>

    <!-- Device -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="25dp"
            android:layout_weight="1"
            android:gravity="right"
            android:text="@string/device"
            android:textSize="16dp"
            android:textStyle="bold|italic" />

        <TextView
            android:id="@+id/txvDevice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="left" />
    </LinearLayout>

    <!-- Computer -->
    <LinearLayout
        android:id="@+id/computerLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="25dp"
                android:layout_weight="1"
                android:gravity="right"
                android:text="@string/year"
                android:textSize="16dp"
                android:textStyle="bold|italic" />

            <TextView
                android:id="@+id/txvYear"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="left" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="25dp"
                android:layout_weight="1"
                android:gravity="right"
                android:text="@string/processor"
                android:textSize="16dp"
                android:textStyle="bold|italic" />

            <TextView
                android:id="@+id/txvProcessor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="left" />
        </LinearLayout>
    </LinearLayout>

    <!-- Screen -->
    <LinearLayout
        android:id="@+id/screenLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:visibility="gone">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="25dp"
            android:layout_weight="1"
            android:gravity="right"
            android:text="@string/inches"
            android:textSize="16dp"
            android:textStyle="bold|italic" />

        <TextView
            android:id="@+id/txvInches"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="left" />
    </LinearLayout>

    <!-- Printer -->
    <LinearLayout
        android:id="@+id/printerLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:visibility="gone">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="25dp"
            android:layout_weight="1"
            android:gravity="right"
            android:text="@string/photocopies_summary"
            android:textSize="16dp"
            android:textStyle="bold|italic" />

        <TextView
            android:id="@+id/txvPhotocopies"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="left" />
    </LinearLayout>

    <!-- Buttons -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center">

        <Button
            android:id="@+id/btnAccept"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:gravity="center"
            android:text="@string/accept"
            android:textColor="@color/black"
            android:textSize="16dp" />
    </LinearLayout>
</LinearLayout>